# Axono

./: .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  benchmark.md  build.sh  index.html  mkdocs.yml  pyproject.toml  setup.py
.github/: .license-header.tmpl  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: auto_release.yml  autopackage_linux_x86_64_cpu.yml  autopackage_linux_x86_64_cuda.yml  autopackage_windows_x86_64_cpu.yml  build.yml  build_linux_cpu.yml  build_linux_cuda.yml  build_wheel_check.yml  build_whl.yml  check_pr.yml  code_style_check.yml  coverage.yml  docs_page.yml  fmt.yml  label-returning-contributor-pr.yml  license-header-check.yml  pypi_linux_cpu.yml  pypi_linux_x86_64_cpu.yml  pypi_linux_x86_64_cuda.yml  test.yml
docs/: README.md  _sidebar.md  index.html  index.md
docs/api/src/: index.html
docs/axono/core/: tensor.md
docs/axono/core/operators/: __init__.md  add.md  matmul.md
docs/axono/core/ops/: relu.md
docs/axono/data/: dataloader.md  transforms.md
docs/axono/models/: container.md  sequential.md  transformer.md
docs/axono/nn/: layers.md  module.md
docs/axono/train/: optimizer.md  trainer.md
docs/axono/viz/: visualizer.md
examples/: mnist_classification.py  text_classification.py  time_series_prediction.py
future/: lazy_tensor.cpp  lazy_tensor.h  memory_pool.h  op_fuser.cpp  op_fuser.h  tensor_view.cpp  tensor_view.h  thread_pool.cpp  thread_pool.h
future/memory/: memory_pool.cpp
include/axono/compute/cpu/: operators.h  ops.h
include/axono/compute/cpu/kernel/: add_kernel.h  matmul_kernel.h  memory_copy_kernel.h  relu_kernel.h  tensor_kernel.h
include/axono/compute/cpu/operators/: add.h  matmul.h  memory_copy.h  randn.h
include/axono/compute/cpu/ops/: relu.h
include/axono/compute/cuda/: add_kernel.cuh  operators.cuh  operators.h  ops.cuh  ops.h  relu_kernel.cuh  tensor_kernel.cuh
include/axono/compute/cuda/kernel/: matmul_kernel.cuh  memory_copy_kernel.cu  relu_kernel.cu  tensor_kernel.cu  tensor_kernel.cuh
include/axono/compute/cuda/operators/: add.h  matmul.h  memory_copy.h  randn.h
include/axono/compute/cuda/ops/: relu.h
include/axono/core/: README.md  lazy_tensor.h  macros.h  op_fuser.h  tensor.h  tensor_view.h  thread_pool.h  types.h
include/axono/core/cpu/tensor/: README.md  kernel.h
include/axono/core/cuda/: detail.h  gpu_sync_buffer.h  tensor.h
include/axono/core/cuda/tensor/: README.md  kernel.h
include/axono/core/memory/: memory_pool.h
include/axono/pybind/compute/operators/: add.h  matmul.h
include/axono/pybind/compute/ops/: relu.h
include/axono/pybind/core/: module.h  tensor.h
learn/core/tensor/: README.md
python/: CMakeLists.txt  _pseudo_ext.py
python/axono/: __init__.py  _pseudo.c  core.py
python/axono/core/: __init__.py  matmul.py  tensor.py
python/axono/core/operators/: __init__.py  add.py  matmul.py
python/axono/core/ops/: __init__.py  relu.py
python/axono/data/: dataloader.py  transforms.py
python/axono/models/: container.py  sequential.py  transformer.py
python/axono/nn/: __init__.py  layers.py  module.py
python/axono/train/: optimizer.py  trainer.py
python/axono/viz/: visualizer.py
python/src/: pybind11_module.cpp
python/tests/: run.py
python/tests/core/: test_matmul.py  test_memory_copy.py  test_tensor.py  test_tensors.py
python/tests/core/nn/: test_module.py
python/tests/core/operators/: test_add.py  test_matmul.py  test_randn.py
python/tests/core/ops/: test_relu.py
search/: search_index.json
src/compute/cpu/operators/: README.md  add.cpp  matmul.cpp  memory_copy.cpp  randn.cpp  tensor_ops.cpp
src/compute/cpu/ops/: README.md  relu.cpp  tensor_ops.cpp
src/compute/cuda/operators/: README.md  add.cu  matmul.cu  memory_copy.cu  randn.cu
src/compute/cuda/ops/: README.md  relu.cu  tensor_ops.cu
src/core/: lazy_tensor.cpp  module.h  op_fuser.cpp  tensor.cpp  tensor_view.cpp  thread_pool.cpp
src/core/cpu/tensor/: README.md  kernel.cpp
src/core/cuda/: detail.cu  detail.cuh  detail.h  gpu_sync_buffer.cu
src/core/cuda/tensor/: README.md  kernel.cu
src/core/future/: tensor_view.cpp
src/core/memory/: memory_pool.cpp
