[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# 允许使用星号导入
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "F403",  # 忽略 `from .core import *` 错误
    "F405",  # 忽略可能未定义的名称，因为星号导入
]

[tool.ruff.lint.isort]
known-first-party = ["axono"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11>=2.6"]
build-backend = "setuptools.build_meta"

[project]
name = "axono"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=1.20.0",
    "pybind11>=2.6",
    # 其他依赖将从requirements.txt读取
]

[project.urls]
Homepage = ""
Repository = ""
Documentation = ""

[tool.setuptools]
package-dir = {"" = "python"}
packages = ["axono"]

[tool.setuptools.package-data]
axono = ["library/*.so", "library/*.dll", "library/*.dylib"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.ext-modules]
axono._pseudo = ["python/axono/_pseudo.c"]
