[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axono"
version = "0.1.0"
description = "Deep learning framework with tensor operations and neural network modules"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    { name = "ByteRainTech", email = "offical@byterain.co" },
    { name = "aztice", email = "offical@byterain.co" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/ByteRainTech/Axono"
Repository = "https://github.com/ByteRainTech/Axono"
Documentation = "https://axono.readthedocs.io"

[tool.setuptools]
package-dir = { "" = "python" }
packages = [
    "axono",
    "axono.core",
    "axono.data",
    "axono.models",
    "axono.nn",
    "axono.train",
    "axono.viz",
    "axono.core.operators",
    "axono.core.ops"
]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"*" = ["*.dll", "*.so", "*.pyd"]

[tool.setuptools.data-files]
"axono/library" = [
    "python/axono/library/*.dll",
    "python/axono/library/*.so",
    "python/axono/library/*.pyd",
]

[[tool.setuptools.ext-modules]]
name = "axono.core.libaxono"
sources = []

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["axono"]
